--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^12.2.0",
+    "enmap": "^5.8.0",
     "express": "^4.17.1"
   },
   "devDependencies": {},
