fixed a bug in suggestions, update readme, update emojis

--- a/config.json
+++ b/config.json
@@ -12,9 +12,10 @@
   "version": "1.2.1",
   "emoji": {
     "error": "❌",
-    "waiting": "⏳",
+    "wait": "⏳",
     "success": "✅",
     "deny": "🚫",
-    "warning": "⚠️"
+    "warn": "⚠️",
+    "exclemation": "❗"
   }
 }
