--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "Cabot",
-  "version": "1.0.0",
+  "version": "1.2.2",
   "description": "A simple, but powerful Discord bot",
   "main": "index.js",
   "dependencies": {
-    "dblapi.js": "^2.4.1",
+    "@top-gg/sdk": "^3.0.7",
     "discord.js": "^12.5.1",
     "enmap": "^5.8.2",
     "express": "^4.17.1"
