--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@top-gg/sdk": "^3.0.7",
+    "beautify": "0.0.8",
     "discord.js": "^12.5.1",
     "enmap": "^5.8.2",
     "express": "^4.17.1"
